[project]
name = "fastapi-authentication"
version = "0.1.0"
description = ""
authors = [
    {name = "Manish Dhull",email = "manishdhull1990@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "ldap3 (>=2.9.1,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "starlette (==0.40.0)"
]

[tool.poetry]
packages = [{include = "fastapi_authentication", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
